--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,21 @@
+*
+{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  /* border: 2px solid red; */
+}
+
 @font-face {
   font-family: myFont;
   src: url(fonts/Montserrat.ttf);
 }
 
 body {
-    background-color: rgb(84, 82, 82);
-  }
-
-  h1::before {  
-    transform: scaleX(0);
-    transform-origin: bottom right;
+    background-image: url("/recipes/background.jpg");
+    background-color: #8a8a8a; /* Used if the image is unavailable */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
   }
   
   h1:hover::before {
@@ -21,13 +27,15 @@ body {
     content: " ";
     display: block;
     position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
+    /* top: 0; right: 0; bottom: 0; left: 0; */
     inset: 0 0 0 0;
-    background: hsl(200 100% 80%);
+    background: hsl(0, 0%, 100%);
     z-index: -1;
-    transition: transform 1s ease;
-    width: 50%;
-    left: 25%;
+    transition: transform 1.5s ease;
+    width: 33%;
+    left: 33%;
+    transform: scaleX(0);
+    transform-origin: bottom right;
     
   }
 
@@ -40,6 +48,23 @@ body {
     font-size: 5rem;
     margin: 0;
   }  
+
+  .openings{
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 300px;
+    margin:auto;
+    padding: 0;
+  }
+
+  .openings h2 {
+    margin: 5px 0;
+  }
+
+  .openings h3{
+    margin: 5px;
+  }
 
   .menu-container {
     display: flex;
@@ -54,13 +79,29 @@ body {
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-color: #fff;
+    background-color: #d1d1d1;
     border: 1px solid #ddd;
     border-radius: 8px;
     overflow: hidden;
     font-family: myFont;
-    height:auto;
-    width:400px;
+    width: 550px;
+    height: auto;
+    padding: 7px;
+  }
+
+  .menu-item img {
+    width: 100%;
+    height: 400px;
+  }
+
+  .menu-item h2 {
+    margin: 10px 0;
+    font-size: 30px;
+  }
+
+  a{
+    color: #090909;
+    text-decoration: none;
   }
 
 
